removing reference to ensembles.py from Using_sklearn_pytorch.ipynb

--- a/Using_sklearn_pytorch.ipynb
+++ b/Using_sklearn_pytorch.ipynb
@@ -35,7 +35,7 @@
      "text": [
       "MOA jar path location (config.ini): ./jar/moa.jar\n",
       "JVM Location (system): \n",
-      "\n",
+      "/Users/gomeshe/Library/Java/JavaVirtualMachines/openjdk-20.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
@@ -174,13 +174,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28.8 s, sys: 701 ms, total: 29.5 s\n",
-      "Wall time: 29.4 s\n"
+      "CPU times: user 9.5 s, sys: 338 ms, total: 9.84 s\n",
+      "Wall time: 9.42 s\n"
      ]
     },
     {
      "data": {
-      "text/plain": "83.88064971751412"
+      "text/plain": [
+       "83.88064971751412"
+      ]
      },
      "execution_count": 4,
      "metadata": {},
@@ -240,7 +242,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "80.94103107344633"
+      "text/plain": [
+       "80.94103107344633"
+      ]
      },
      "execution_count": 5,
      "metadata": {},
@@ -295,13 +299,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 25 s, sys: 104 ms, total: 25.2 s\n",
-      "Wall time: 25 s\n"
+      "CPU times: user 8.24 s, sys: 18.3 ms, total: 8.26 s\n",
+      "Wall time: 8.25 s\n"
      ]
     },
     {
      "data": {
-      "text/plain": "83.88064971751412"
+      "text/plain": [
+       "83.88064971751412"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -354,7 +360,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "83.88064971751412"
+      "text/plain": [
+       "83.88064971751412"
+      ]
      },
      "execution_count": 7,
      "metadata": {},
@@ -388,41 +396,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b6d4a63467b23b5",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### Set random seeds"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9b6d4a63467b23b5"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "2242896e95964ef4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T07:54:18.676689Z",
+     "start_time": "2023-12-11T07:54:18.669019Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import random\n",
     "random_seed=1\n",
     "random.seed(random_seed)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-11T07:54:18.676689Z",
-     "start_time": "2023-12-11T07:54:18.669019Z"
-    }
-   },
-   "id": "2242896e95964ef4"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "ccbccfce41f2f18",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### Define network structure"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ccbccfce41f2f18"
+   ]
   },
   {
    "cell_type": "code",
@@ -480,13 +497,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "882b6b292a2de100",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### Using instance loop"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "882b6b292a2de100"
+   ]
   },
   {
    "cell_type": "code",
@@ -702,13 +722,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c01f8aea1b78936",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### 2.1.1 Example using PyTorchClassifier + the instance loop"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2c01f8aea1b78936"
+   ]
   },
   {
    "cell_type": "code",
@@ -723,7 +746,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "71.99417372881356"
+      "text/plain": [
+       "71.98975988700565"
+      ]
      },
      "execution_count": 12,
      "metadata": {},
@@ -757,13 +782,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75ee1eb154c01996",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### 2.1.2 Example using PyTorchClassifier and prequential_evaluation"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "75ee1eb154c01996"
+   ]
   },
   {
    "cell_type": "code",
@@ -778,7 +806,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "71.98313912429379"
+      "text/plain": [
+       "71.98313912429379"
+      ]
      },
      "execution_count": 13,
      "metadata": {},
@@ -825,13 +855,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eaf035bef41c2ed2",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### Create a SummaryWriter instance."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "eaf035bef41c2ed2"
+   ]
   },
   {
    "cell_type": "code",
@@ -851,17 +884,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5f87ce2a3293c34",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "#### Example using PyTorchClassifier + the instance loop + TensorBoard"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "e5f87ce2a3293c34"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "b7f048d71276da1f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T07:57:07.388352Z",
+     "start_time": "2023-12-11T07:56:27.871621Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "from evaluation import ClassificationEvaluator\n",
@@ -892,15 +939,7 @@
     "\n",
     "writer.add_scalar(\"accuracy\", evaluator.accuracy(), i)\n",
     "writer.flush()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-11T07:57:07.388352Z",
-     "start_time": "2023-12-11T07:56:27.871621Z"
-    }
-   },
-   "id": "b7f048d71276da1f"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -986,7 +1025,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "79.05190677966102"
+      "text/plain": [
+       "79.05190677966102"
+      ]
      },
      "execution_count": 17,
      "metadata": {},
@@ -995,7 +1036,7 @@
    ],
    "source": [
     "## Test-then-train loop\n",
-    "from ensembles import OnlineBagging\n",
+    "from classifiers import OnlineBagging\n",
     "from evaluation import ClassificationEvaluator\n",
     "\n",
     "## Opening a file as a stream\n",
@@ -1039,7 +1080,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'RandomTreeGenerator '"
+      "text/plain": [
+       "'RandomTreeGenerator '"
+      ]
      },
      "execution_count": 18,
      "metadata": {},
@@ -1064,7 +1107,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "7"
+      "text/plain": [
+       "7"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -1089,7 +1134,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "79.69412076271186"
+      "text/plain": [
+       "79.69632768361582"
+      ]
      },
      "execution_count": 20,
      "metadata": {},
