updating the ensemble wrappers (ARF and OnlineBagging) and some adhoc updates to notebooks

--- a/DEMO.ipynb
+++ b/DEMO.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "* Examples on how to use this library for classification and regression, reading files from CSVs and using synthetic generators from MOA.\n",
     "\n",
-    "**notebook last updated on 08/12/2023**"
+    "**notebook last updated on 15/12/2023**"
    ]
   },
   {
@@ -286,10 +286,10 @@
      "data": {
       "text/plain": [
        "{'learner': 'OnlineBagging',\n",
-       " 'cumulative': <evaluation.ClassificationEvaluator at 0x104f95090>,\n",
-       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x1060e5590>,\n",
-       " 'wallclock': 1.5961339473724365,\n",
-       " 'cpu_time': 1.801927000000001}"
+       " 'cumulative': <evaluation.ClassificationEvaluator at 0x1041ad190>,\n",
+       " 'windowed': <evaluation.ClassificationWindowedEvaluator at 0x123f87ed0>,\n",
+       " 'wallclock': 1.646461009979248,\n",
+       " 'cpu_time': 1.9042149999999998}"
       ]
      },
      "execution_count": 4,
@@ -1373,6 +1373,7 @@
     "# The drift location is based on the number of instances (5000) as well as the drift width (1000, the default value) \n",
     "stream_agr1drift = Stream(moa_stream=ConceptDriftStream(), \n",
     "                          CLI=\"-s generators.AgrawalGenerator -d (generators.AgrawalGenerator -f 2) -p 5000 -w 1000\")\n",
+    "\n",
     "\n",
     "hat = MOAClassifier(moa_learner=HoeffdingAdaptiveTree())\n",
     "ht = MOAClassifier(moa_learner=HoeffdingTree())\n",
