--- a/MOALearners_API_Examples.ipynb
+++ b/MOALearners_API_Examples.ipynb
@@ -16,7 +16,7 @@
     "* We can create wrappers for each class, like the AdaptiveRandomForest wrapper. Using an alias in here as we don't want to conflict with the MOA AdaptiveRandomForest. \n",
     "```from classifiers import AdaptiveRandomForest as ARF```\n",
     "\n",
-    "**Notebook last update: 08/12/2023**"
+    "**Notebook last update: 14/12/2023**"
    ]
   },
   {
@@ -53,9 +53,9 @@
     "# For classification tests\n",
     "from moa.classifiers.trees import HoeffdingAdaptiveTree\n",
     "\n",
-    "# local code imports\n",
+    "# CapyMOA code imports\n",
     "from evaluation import *\n",
-    "from classifiers import OnlineBagging, AdaptiveRandomForest as ARF\n",
+    "from classifiers import OnlineBagging, AdaptiveRandomForest\n",
     "from regressors import AdaptiveRandomForestRegressor\n",
     "from learners import MOAClassifier, MOARegressor\n",
     "\n",
@@ -63,6 +63,14 @@
     "arff_fried_path = './data/fried.arff'\n",
     "\n",
     "from stream import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86519b73-d560-468d-844f-ae79c6098675",
+   "metadata": {},
+   "source": [
+    "## MOARegressor"
    ]
   },
   {
@@ -194,8 +202,6 @@
     "    instance = stream.next_instance()\n",
     "\n",
     "    prediction = learner.predict(instance)\n",
-    "\n",
-    "    # evaluator.addResult(instance, prediction)\n",
     "    evaluator_TTT.update(instance.y(),prediction)\n",
     "    evaluator_windowed.update(instance.y(),prediction)\n",
     "    learner.train(instance)\n",
@@ -207,8 +213,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fd3d2b8-776d-43d2-8f7e-9e5f9f9e3cf2",
+   "metadata": {},
+   "source": [
+    "## AdaptiveRandomForest (ARF) wrapper example"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00b77830-c8f9-4bae-8d7e-bf064900b806",
    "metadata": {},
    "outputs": [
@@ -315,7 +329,7 @@
        "4                    54.114713  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,11 +339,8 @@
     "sampleFrequency = 1000\n",
     "instancesProcessed = 1\n",
     "\n",
-    "# stream = Stream(moa_stream=ArffFileStream(arff_fried_path, -1))\n",
     "stream = RandomTreeGenerator()\n",
-    "# stream.get_schema().get_label_values() is None\n",
-    "\n",
-    "learner = ARF(schema=stream.get_schema(), CLI=\"-s 5\")\n",
+    "learner = AdaptiveRandomForest(schema=stream.get_schema(), ensemble_size=5, max_features=0.6)\n",
     "\n",
     "evaluator_TTT = ClassificationEvaluator(schema=stream.get_schema(), window_size=sampleFrequency)\n",
     "evaluator_windowed = ClassificationWindowedEvaluator(schema=stream.get_schema(), window_size=sampleFrequency)\n",
@@ -361,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9f202299-317d-45db-a62d-747769a958a8",
    "metadata": {},
    "outputs": [
@@ -568,18 +579,18 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from moa.classifiers.meta import AdaptiveRandomForest\n",
+    "from moa.classifiers.meta import AdaptiveRandomForest as MOA_ARF\n",
     "\n",
     "maxInstancesToProcess = 1000\n",
     "instancesProcessed = 1\n",
     "\n",
-    "learner = AdaptiveRandomForest()\n",
+    "learner = MOA_ARF()\n",
     "# Setting parameters using setViaCLIString\n",
     "learner.getOptions().setViaCLIString(\"-s 5\")\n",
     "learner.prepareForUse()\n",
@@ -626,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "00a39c4f-0998-4783-a791-9d76ae75fe59",
    "metadata": {},
    "outputs": [
@@ -862,7 +873,7 @@
        "9                     66.666667                     53.846154  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "817d2b5d-0ae2-4e8f-8cd2-03d3d5291f53",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1127,7 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1139,7 @@
     "rtg.prepareForUse()\n",
     "\n",
     "schema = Schema(moa_header=rtg.getHeader())\n",
-    "learner = ARF(schema=schema, ensemble_size=5)\n",
+    "learner = AdaptiveRandomForest(schema=schema, ensemble_size=5)\n",
     "\n",
     "evaluator = ClassificationWindowedEvaluator(schema=Schema(labels=[0,1,2]), window_size=100, recall_per_class=True)\n",
     "evaluator_TTT = ClassificationEvaluator(schema=Schema(moa_header=rtg.getHeader()), recall_per_class=True)\n",
@@ -1159,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "32892084-c0a3-430c-8df2-4d92dee1d544",
    "metadata": {},
    "outputs": [
@@ -1366,19 +1377,21 @@
        "9                     60.606061                     61.538462  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from moa.classifiers.trees import HoeffdingTree\n",
+    "\n",
     "rtg = MOA_RTG()\n",
     "# Setting parameters using setViaCLIString\n",
     "rtg.getOptions().setViaCLIString(\"-c 3 -u 10 -o 0\")\n",
     "rtg.prepareForUse()\n",
     "\n",
     "schema = Schema(moa_header=rtg.getHeader())\n",
-    "learner = OnlineBagging(schema=schema, ensemble_size=10, base_learner=\"(trees.HoeffdingTree -g 50)\")\n",
+    "learner = OnlineBagging(schema=schema, ensemble_size=10, base_learner=HoeffdingTree)\n",
     "# learner = OnlineBagging(schema=schema, CLI=\"-s 10\")\n",
     "\n",
     "evaluator = ClassificationWindowedEvaluator(schema=Schema(labels=[0,1,2]), window_size=100, recall_per_class=True)\n",
@@ -1412,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1e7a3122-ee31-467a-86b6-4c90e4f82dde",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1632,7 @@
        "9                     78.787879                     61.538462  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1643,7 @@
     "rtg.getOptions().setViaCLIString(\"-c 3 -u 10 -o 0\")\n",
     "rtg.prepareForUse()\n",
     "\n",
-    "learner = ARF(random_seed=1, CLI=\"-s 5\")\n",
+    "learner = AdaptiveRandomForest(random_seed=1, CLI=\"-s 5\")\n",
     "\n",
     "# Shows the CLI help, basically what each char in the CLI mean\n",
     "# print(learner.CLI_help())\n",
@@ -1672,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "499f5773-e0c0-4eb2-80c8-4fdf727df875",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1784,7 @@
        "3                      0.697030                               0.696947  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "50c485e0-d32c-4665-b544-70f4a942d9ca",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9bbaa729-58db-4cb2-ade2-daf216c7be7c",
    "metadata": {},
    "outputs": [
@@ -1989,7 +2002,7 @@
        "3                      0.826327                               0.826136  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "12d26af5-ccfe-4274-a4b6-2a6cb3e24878",
    "metadata": {},
    "outputs": [
@@ -2045,11 +2058,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.87204803582077\n",
-      "3.771523667554421\n",
-      "0.7064279186411917\n",
-      "0.4306815105163202\n",
-      "0.4305278520762299\n"
+      "3.2786181111261965\n",
+      "4.228177670279516\n",
+      "0.8064305817226001\n",
+      "0.2844696324376049\n",
+      "0.28427651157090583\n"
      ]
     },
     {
@@ -2086,42 +2099,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10000.0</td>\n",
-       "      <td>3.171940</td>\n",
-       "      <td>4.105194</td>\n",
-       "      <td>0.783453</td>\n",
-       "      <td>0.824732</td>\n",
-       "      <td>0.319817</td>\n",
-       "      <td>0.319068</td>\n",
+       "      <td>3.516331</td>\n",
+       "      <td>4.486692</td>\n",
+       "      <td>0.868516</td>\n",
+       "      <td>0.901375</td>\n",
+       "      <td>0.187523</td>\n",
+       "      <td>0.186628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10000.0</td>\n",
-       "      <td>2.842502</td>\n",
-       "      <td>3.731284</td>\n",
-       "      <td>0.699215</td>\n",
-       "      <td>0.745694</td>\n",
-       "      <td>0.443941</td>\n",
-       "      <td>0.443329</td>\n",
+       "      <td>3.267398</td>\n",
+       "      <td>4.207316</td>\n",
+       "      <td>0.803733</td>\n",
+       "      <td>0.840828</td>\n",
+       "      <td>0.293008</td>\n",
+       "      <td>0.292229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10000.0</td>\n",
-       "      <td>2.781082</td>\n",
-       "      <td>3.654003</td>\n",
-       "      <td>0.690196</td>\n",
-       "      <td>0.737488</td>\n",
-       "      <td>0.456112</td>\n",
-       "      <td>0.455513</td>\n",
+       "      <td>3.201807</td>\n",
+       "      <td>4.133389</td>\n",
+       "      <td>0.794609</td>\n",
+       "      <td>0.834242</td>\n",
+       "      <td>0.304040</td>\n",
+       "      <td>0.303274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10000.0</td>\n",
-       "      <td>2.711143</td>\n",
-       "      <td>3.594034</td>\n",
-       "      <td>0.657858</td>\n",
-       "      <td>0.710913</td>\n",
-       "      <td>0.494602</td>\n",
-       "      <td>0.494046</td>\n",
+       "      <td>3.133928</td>\n",
+       "      <td>4.080692</td>\n",
+       "      <td>0.760447</td>\n",
+       "      <td>0.807176</td>\n",
+       "      <td>0.348467</td>\n",
+       "      <td>0.347749</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2129,25 +2142,25 @@
       ],
       "text/plain": [
        "   classified instances  mean absolute error  root mean squared error  \\\n",
-       "0               10000.0             3.171940                 4.105194   \n",
-       "1               10000.0             2.842502                 3.731284   \n",
-       "2               10000.0             2.781082                 3.654003   \n",
-       "3               10000.0             2.711143                 3.594034   \n",
+       "0               10000.0             3.516331                 4.486692   \n",
+       "1               10000.0             3.267398                 4.207316   \n",
+       "2               10000.0             3.201807                 4.133389   \n",
+       "3               10000.0             3.133928                 4.080692   \n",
        "\n",
        "   relative mean absolute error  relative root mean squared error  \\\n",
-       "0                      0.783453                          0.824732   \n",
-       "1                      0.699215                          0.745694   \n",
-       "2                      0.690196                          0.737488   \n",
-       "3                      0.657858                          0.710913   \n",
+       "0                      0.868516                          0.901375   \n",
+       "1                      0.803733                          0.840828   \n",
+       "2                      0.794609                          0.834242   \n",
+       "3                      0.760447                          0.807176   \n",
        "\n",
        "   coefficient of determination  adjusted coefficient of determination  \n",
-       "0                      0.319817                               0.319068  \n",
-       "1                      0.443941                               0.443329  \n",
-       "2                      0.456112                               0.455513  \n",
-       "3                      0.494602                               0.494046  "
+       "0                      0.187523                               0.186628  \n",
+       "1                      0.293008                               0.292229  \n",
+       "2                      0.304040                               0.303274  \n",
+       "3                      0.348467                               0.347749  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2159,7 +2172,7 @@
     "\n",
     "fried_arff = stream_from_file(path_to_csv_or_arff=arff_fried_path, class_index=-1)\n",
     "\n",
-    "learner = AdaptiveRandomForestRegressor(schema=fried_arff.get_schema(), ensemble_size=5)\n",
+    "learner = AdaptiveRandomForestRegressor(schema=fried_arff.get_schema(), ensemble_size=5, max_features=0.3)\n",
     "\n",
     "evaluator_TTT = RegressionEvaluator(schema=fried_arff.get_schema(), window_size=sampleFrequency)\n",
     "evaluator_windowed = RegressionWindowedEvaluator(schema=fried_arff.get_schema(), window_size=sampleFrequency)\n",
