--- a/Using_jpype_MOA_example.ipynb
+++ b/Using_jpype_MOA_example.ipynb
@@ -10,7 +10,7 @@
     "* This notebook does not use the prepare_jpype.py script\n",
     "* It servers as an example of how to use jpype directly (it is easy, but it is good to have this example around).\n",
     "\n",
-    "**Notebook last update: 20/10/2023**"
+    "**Notebook last update: 20/11/2023**"
    ]
   },
   {
@@ -90,14 +90,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "def73fba-7f72-4168-b621-1fc4b7c12a66",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.79 s, sys: 605 ms, total: 4.4 s\n",
-      "Wall time: 1.29 s\n"
+      "CPU times: user 3.11 s, sys: 1.03 s, total: 4.14 s\n",
+      "Wall time: 1.62 s\n"
      ]
     },
     {
@@ -363,14 +365,6 @@
     "# Print the DataFrame\n",
     "results_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bdc7aae-643e-451f-a62e-3ac0acb9606b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
